--- a/README.adoc
+++ b/README.adoc
@@ -1,11 +1,9 @@
-= Trusted Application Pipeline Installation
+= GitOps Demo
 
 == Requirements
 
-- OCP 4.18
+- OCP >= 4.18
 - oc client >= 4.18
-- Minio client(https://min.io/docs/minio/linux/reference/minio-mc.html[mc]) in your local $PATH 
-- Helm client
 - Ansible With Kubernets module (https://docs.ansible.com/ansible/latest/collections/kubernetes/core/k8s_module.html#requirements[requirements])
 
 == What is available?
